<resources>
    <string name="app_name">MathPractice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Operations -->
    <string name="toplama">Toplama</string>
    <string name="cikarma">Çıkarma</string>
    <string name="carpma">Çarpma</string>
    <string name="bölme">Bölme</string>
    <string name="islem">ISLEM: </string>
    <string name="sayi">23</string>
    <string name="cevapla">CEVAPLA</string>
    <string name="toplam">TOPLAM</string>
    <string name="fark">FARK</string>
    <string name="carpım">CARPIM</string>
    <string name="bölüm">BOLUM</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_welcome">Merhaba Hoşgeldin!</string>
    <string name="operations">Yapmak İstediğin İşlemi Seç ve Alıştırmaya Başla!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>