<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CikarmaFragment">

    <TextView
        android:id="@+id/textViewSecondNumberCikarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="388dp"
        android:fontFamily="@font/dkmidnightchalkfont"
        android:text="@string/sayi"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstNumberCikarma" />

    <TextView
        android:id="@+id/editTextIslem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="585dp"
        android:autofillHints="@string/islem"
        android:ems="10"
        android:fontFamily="@font/dkmidnightchalkfont"
        android:letterSpacing=".2"
        android:text="@string/islem"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/line"
        android:layout_width="304dp"
        android:layout_height="17dp"
        android:layout_marginBottom="308dp"
        android:backgroundTint="#FAFAFA"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewSecondNumberCikarma"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextIslem" />

    <ImageView
        android:id="@+id/minusSign"
        android:layout_width="39dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintStart_toStartOf="@+id/editTextIslem"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondNumberCikarma"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextCevapCikarma"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="244dp"
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:fontFamily="@font/dkmidnightchalkfont"
        android:hint="@string/fark"
        android:inputType="number"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolorgray"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewSecondNumberCikarma"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonCevaplaCikarma"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCevaplaCikarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cevapla"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCevapCikarma"
        app:layout_constraintStart_toStartOf="@+id/editTextIslem"
        app:layout_constraintTop_toTopOf="@+id/editTextCevapCikarma"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textViewFirstNumberCikarma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/dkmidnightchalkfont"
        android:text="@string/sayi"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIslem" />


</androidx.constraintlayout.widget.ConstraintLayout>